# CS-PIP

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod
cmd/cspip/: main.go
cmd/cspip-runtime/: main.c
internal/analyzer/: analyzer_test.go  bottleneck.go  classifier.go  fingerprints.go  pattern.go  types.go
internal/profiler/: cgroup.go  context_switch.go  cpu.go  io.go  memory.go  pagefault.go  sampler.go  syscall.go  types.go
internal/reporter/: alert.go  json_renderer.go  reporter_test.go  summary.go  text_renderer.go  types.go
internal/runtime/: cgroup.c  cgroup.h  container.c  container.h  namespace.c  namespace.h  network.c  network.h  rootfs.c  rootfs.h  types.h
internal/store/: db.go  types.go
testdata/expected/: sample_report.json
testdata/workloads/: cpu_stress.sh  io_stress.sh  mem_stress.sh
tests/: runtime_test.c
